// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> it renders correctly with minimal props 1`] = `
<Provider>
  <ForwardRef
    href="/"
  >
    <ForwardRef
      component="a"
      href="/"
      isStatic={[Function]}
      lang=""
    >
      <a
        href="/"
        lang=""
      >
        A link
      </a>
    </ForwardRef>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when a custom component is used it renders correctly 1`] = `
<Provider
  component={[Function]}
>
  <ForwardRef
    href="/page/"
  >
    <ForwardRef
      component={[Function]}
      href="/page/"
      isStatic={[Function]}
      lang=""
    >
      <CustomLink
        href="/page/"
        isRelative={true}
        isStatic={false}
        lang=""
      >
        <div
          href="/page/"
          isrelative="true"
          isstatic="false"
          lang=""
        >
          A link
        </div>
      </CustomLink>
    </ForwardRef>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set /en is not prefixed by the language 1`] = `
<Provider
  lang="en"
>
  <ForwardRef
    href="/en"
  >
    <ForwardRef
      component="a"
      href="/en"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="/en"
        lang="en"
      >
        A link
      </a>
    </ForwardRef>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set /en/ is not prefixed by the language 1`] = `
<Provider
  lang="en"
>
  <ForwardRef
    href="/en/"
  >
    <ForwardRef
      component="a"
      href="/en/"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="/en/"
        lang="en"
      >
        A link
      </a>
    </ForwardRef>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set /enter/ is still prefixed by the language 1`] = `
<Provider
  lang="en"
>
  <ForwardRef
    href="/enter/"
  >
    <ForwardRef
      component="a"
      href="/enter/"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="/en/enter/"
        lang="en"
      >
        A link
      </a>
    </ForwardRef>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set absolute URL's are unaffected 1`] = `
<Provider
  lang="en"
>
  <ForwardRef
    href="https://site.com/page/"
  >
    <ForwardRef
      component="a"
      href="https://site.com/page/"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="https://site.com/page/"
        lang="en"
      >
        A link
      </a>
    </ForwardRef>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set already language prefixed URL's are unaffected 1`] = `
<Provider
  lang="en"
>
  <ForwardRef
    href="/en/page/"
  >
    <ForwardRef
      component="a"
      href="/en/page/"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="/en/page/"
        lang="en"
      >
        A link
      </a>
    </ForwardRef>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set it prefixes the URL with the lang 1`] = `
<Provider
  lang="en"
>
  <ForwardRef
    href="/page/"
  >
    <ForwardRef
      component="a"
      href="/page/"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="/en/page/"
        lang="en"
      >
        A link
      </a>
    </ForwardRef>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set when validation for static URL's are in place non-static URL's are prefixed with the language 1`] = `
<Provider
  isStatic={[Function]}
  lang="en"
>
  <ForwardRef
    href="/non-static/page/"
  >
    <ForwardRef
      component="a"
      href="/non-static/page/"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="/en/non-static/page/"
        lang="en"
      >
        A link
      </a>
    </ForwardRef>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the context provider has a lang set when validation for static URL's are in place static URL's are unaffected 1`] = `
<Provider
  isStatic={[Function]}
  lang="en"
>
  <ForwardRef
    href="/images/myimage.jpeg"
  >
    <ForwardRef
      component="a"
      href="/images/myimage.jpeg"
      isStatic={[Function]}
      lang="en"
    >
      <a
        href="/images/myimage.jpeg"
        lang="en"
      >
        A link
      </a>
    </ForwardRef>
  </ForwardRef>
</Provider>
`;

exports[`<Link /> when the provider is not used it renders correctly 1`] = `
<ForwardRef
  href="/"
>
  <ForwardRef
    component="a"
    href="/"
    isStatic={[Function]}
  >
    <a
      href="/"
    >
      A link
    </a>
  </ForwardRef>
</ForwardRef>
`;
